--- a/src/components/CrisisRecord/CrisisRecord.scss
+++ b/src/components/CrisisRecord/CrisisRecord.scss
@@ -1,4 +1,4 @@
-.ContainerContactsInformation {
+.ContainerCrisisRecordInformation {
     height: 100vh;
     width: 100vw;
 }
@@ -144,6 +144,12 @@ header {
             }
         }*/
         
+        .ContainerCrisisRecordInformation {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+
             .CrisisRecordInfoContainer{
                 width: 70%;
                 margin-left: auto;
@@ -226,7 +232,7 @@ header {
                     font-size: 1.7rem;
                     height: 60px;
                     width: 160px;
-                    margin-top: 15px;
+                    margin-top: 30px;
                 }
             }
     }
