--- a/src/components/CrisisRecord/CrisisRecord.scss
+++ b/src/components/CrisisRecord/CrisisRecord.scss
@@ -71,18 +71,18 @@ header {
                 color: #BFBDBD;
                 font-size: 2rem;
             }
-            img {
-                margin-right: 15px;
-                width: 25px;
-                height: 25px;
-                margin-top: 22px;
-            }
+            // img {
+            //     width: 25px;
+            //     height: 25px;
+            //     margin-right: 10px;
+            //     margin-top: 22px;
+            // }
         }
-        .Subtext {
-            margin-left: 15px;
-            font-size: 18px;
-            color: #BFBDBD;
-        }
+        // .Subtext {
+        //     margin-left: 15px;
+        //     font-size: 18px;
+        //     color: #BFBDBD;
+        // }
         .Form {
             display: flex;
             justify-content: left;
@@ -184,6 +184,7 @@ header {
                     img {
                     }
                 }*/
+                
                 .BtnPersonalInfo {
                     font-size: 1.4rem;
                     height: 42px;
