--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,9 @@ header {
         align-items: center;
         .LogoContainer {
             color: white;
-            width: 20%;
+            width: 100vw;
+            margin-top: 1%;
+            margin-bottom: 3%;
             text-align: center;
             .h1 {
                 font-family: 'Tangerine', cursive;
@@ -35,7 +37,7 @@ header {
             .a {
                 color: white;
                 text-decoration: none;
-                font-size: 15px;
+                font-size: 1.4rem;
             }
             a:hover {
                 background: #f2f2f2;
@@ -50,15 +52,24 @@ header {
 
 @media(max-width:768px){
     header{
-        height: 28vh;
+        height: 30vh;
         .MenuContainer{
             flex-direction: column;
             .LogoContainer{
-                width: 150px;
+                width: 100vw;
                 text-align: center;
-                margin-bottom: 20px;
+                margin-top: 1%;
+                margin-bottom: 3%;
                 .h1{
-                    font-size: 80px;
+                    font-size: 5rem;
+                }
+            }
+            .Enlaces{
+                flex-direction: column;
+                text-align: center;
+                .a{
+                    margin-bottom: 6px;
+                    font-size: 1.3rem;
                 }
             }
         }
@@ -67,18 +78,24 @@ header {
 
 @media(max-width:576px){
     header{
+        height: 38vh;
         .MenuContainer{
             flex-direction: column;
+            padding-bottom: 2%;
             .LogoContainer{
+                width: 100vw;
+                margin-top: 1%;
+                margin-bottom: 3%;
                 .h1{
-                    font-size: 60px;
+                    font-size: 4rem;
                 }
             }
             .Enlaces{
                 flex-direction: column;
                 text-align: center;
                 .a{
-                    margin-bottom: 10px;
+                    margin-bottom: 6px;
+                    font-size: 1rem;
                 }
             }
         }
