--- a/src/components/PersonalInformation/PersonalInformation.scss
+++ b/src/components/PersonalInformation/PersonalInformation.scss
@@ -1,213 +1,157 @@
-.ContainerContactsInformation {
-    height: 100vh;
-    width: 100vw;
+.MainContainer{
+    .ContainerPersonalInformation{
+        width: 100%;
+        height: 100%;    
+            .PersonalInformationInfoContainer{
+                display: flex;
+                justify-content: left;
+                flex-direction: column;
+                padding: 40px;
+                .PersonalInfo{
+                    width: 90%;
+                    .Title {
+                        // display: flex;
+                        // justify-content: space-between;
+                        // margin-top: 3%;
+                        // .PersonalInformationText {
+                            // margin-left: 15px;
+                            color: #BFBDBD;
+                            font-size: 40px;
+                        // }
+                        // img {
+                        //     margin-right: 15px;
+                        //     width: 25px;
+                        //     height: 25px;
+                        //     margin-top: 22px;
+                        // }
+                    }
+                    .Subtext {
+                        // margin-left: 15px;
+                        font-size: 18px;
+                        color: #BFBDBD;
+                    }
+                    .Form {
+                        display: flex;
+                        justify-content: left;
+                        flex-direction: column;
+                        width: 80%;
+                        // margin-left: 15px;
+                        .Form-control {
+                            font-family: Roboto;
+                            color: #B3B0B0;
+                            .UserLabel {
+                                font-family: 'Roboto';
+                                font-weight: 32;
+                                color: #B3B0B0;
+                                font-size: 22px;
+                                width: 200px;
+                            }
+                            .InputLogin {
+                                border: none;
+                                border-bottom: 1px solid #673AB7;
+                                border-radius: 3px;
+                                width: 30%;
+                                margin-bottom: 2%;
+                            }
+                        }
+                        .Form-control-address {
+                            display: flex;
+                            flex-direction: column;
+                            font-family: Roboto;
+                            color: #B3B0B0;
+                            .InputAddress {
+                                border-bottom: 1px solid #673AB7;
+                                border-radius: 3px;
+                                width: 90%;
+                                margin-left: 11px;
+                                margin-bottom: 2%;
+                                height: 90px;
+                            }
+                        }
+                    }
+                    .EmergencyText {
+                        margin-left: 15px;
+                        color: #B3B0B0;
+                        margin-bottom: 0;
+                        margin-top: 2px;
+                        font-size: 22px;
+                    }
+                    .EmergencySubtext {
+                        margin-left: 15px;
+                        color: #B3B0B0;
+                    }
+                    .Addimage {
+                        width: 28px;
+                        height: 28px;
+                        margin-bottom: 2%;
+                        margin-left: 90%;
+                    }
+                    .BtnPersonalInfo {
+                        width: 120px;
+                        background-color: #FF4081;
+                        color: white;
+                        font-family: Roboto;
+                        font-size: 30px;
+                        height: 50px;
+                        padding: 2px 15px;
+                        align-items: center;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+                }
+            }
+    }
 }
 
-// header {
-//     display: flex;
-//     background-color: #6A1B9A;
-//     width: 100%;
-//     top: 0;
-//     justify-content: space-evenly;
-//     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-//     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-//     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-//     .Menu {
-//         width: 90%;
-//         max-width: 1000px;
-//         margin: auto;
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: space-between;
-//         align-items: center;
+
+
+// @media(max-width:576px) {    
+//     .PersonalInformationInfoContainer{
+//         .Title {
+//             .PersonalInformationText {
+//                 font-size: 20px;
+//             }
+//             img {
+//                 width: 20px;
+//                 margin-top: 16px;
+//             }
+//         }
+//         .Subtext {
+//             font-size: 12px;
+//         }
+//         .Form {
+//             .UserLabel {
+//                 font-size: 12px;
+//             }
+//             .InputLogin {
+//             }
+//             .Form-control-address {
+//                 .InputAddress {
+//                     margin-left: 6px;
+//                     height: 60px;
+//             }
+//         }
 //     }
-//     .Logo {
-//         display: inline-block;
-//         margin-right: 1em;
-//         color: white;
-//         h1 {
-//             font-family: 'Tangerine';
-//             font-size: 55px;
+//         .EmergencyText {
+//             font-size: 16px;
 //         }
-//         .Btn-menu {
-//             display: none;
+//         .EmergencySubtext {
+//             margin-top: 5px;
+//             margin-bottom: 0;
+//             font-size: 10px;
 //         }
-//     }
-//     .Enlaces {
-//         display: inline-block;
-//         text-align: right;
-//         a {
-//             color: white;
-//             margin-right: 5%;
-//             text-decoration: none;
+//         .Addimage {
+//             width: 15px;
+//             height: 15px;
 //         }
-//         a:hover {
-//             background: #f2f2f2;
-//             color: #4357ad;
+//         .BtnPersonalInfo {
+//             width: 100px;
+//             font-size: 20px;
+//             height: 35px;
+//             padding: 1px 10px;
 //         }
 //     }
 // }
 
-//     .PersonalInformationInfoContainer{
-//         display: flex;
-//         justify-content: left;
-//         flex-direction: column;
-//         .Title {
-//             display: flex;
-//             justify-content: space-between;
-//             margin-top: 3%;
-//             .PersonalInformationText {
-//                 margin-left: 15px;
-//                 color: #BFBDBD;
-//                 font-size: 40px;
-//             }
-//             img {
-//                 margin-right: 15px;
-//                 width: 25px;
-//                 height: 25px;
-//                 margin-top: 22px;
-//             }
-//         }
-//         .Subtext {
-//             margin-left: 15px;
-//             font-size: 18px;
-//             color: #BFBDBD;
-//         }
-//         .Form {
-//             display: flex;
-//             justify-content: left;
-//             flex-direction: column;
-//             margin-left: 15px;
-//             .Form-control {
-//                 font-family: Roboto;
-//                 color: #B3B0B0;
-//                 .UserLabel {
-//                     font-family: 'Roboto';
-//                     font-weight: 32;
-//                     color: #B3B0B0;
-//                     font-size: 22px;
-//                     margin-right: 15px;
-//                 }
-//                 .InputLogin {
-//                     border: none;
-//                     border-bottom: 1px solid #673AB7;
-//                     border-radius: 3px;
-//                     width: 30%;
-//                     margin-bottom: 2%;
-//                 }
-//             }
-//             .Form-control-address {
-//                 display: flex;
-//                 flex-direction: column;
-//                 font-family: Roboto;
-//                 color: #B3B0B0;
-//                 .InputAddress {
-//                     border-bottom: 1px solid #673AB7;
-//                     border-radius: 3px;
-//                     width: 90%;
-//                     margin-left: 11px;
-//                     margin-bottom: 2%;
-//                     height: 90px;
-//                 }
-//             }
-//         }
-//         .EmergencyText {
-//             margin-left: 15px;
-//             color: #B3B0B0;
-//             margin-bottom: 0;
-//             margin-top: 2px;
-//             font-size: 22px;
-//         }
-//         .EmergencySubtext {
-//             margin-left: 15px;
-//             color: #B3B0B0;
-//         }
-//         .Addimage {
-//             width: 28px;
-//             height: 28px;
-//             margin-bottom: 2%;
-//             margin-left: 90%;
-//         }
-//         .BtnPersonalInfo {
-//             width: 120px;
-//             background-color: #FF4081;
-//             color: white;
-//             font-family: Roboto;
-//             font-size: 30px;
-//             height: 50px;
-//             padding: 2px 15px;
-//             align-items: center;
-//             margin-left: auto;
-//             margin-right: auto;
-//         }
-//     }
 
-//     @media(max-width:576px) {
-//         header {
-//             .Menu {
-//             }
-//             .Logo {
-//                 h1 {
-//                     font-size: 30px;
-//                 }
-//                 .Btn-menu {
-//                 }
-//             }
-//             .Enlaces {
-//                 a {
-//                     font-size: 12px;
-//                 }
-//                 a:hover {
-//                 }
-//             }
-//         }
-        
-//             .PersonalInformationInfoContainer{
-//                 .Title {
-//                     .PersonalInformationText {
-//                         font-size: 20px;
-//                     }
-//                     img {
-//                         width: 20px;
-//                         margin-top: 16px;
-//                     }
-//                 }
-//                 .Subtext {
-//                     font-size: 12px;
-//                 }
-//                 .Form {
-//                     .UserLabel {
-//                         font-size: 12px;
-//                     }
-//                     .InputLogin {
-//                     }
-//                     .Form-control-address {
-//                         .InputAddress {
-//                             margin-left: 6px;
-//                             height: 60px;
-//                     }
-//                 }
-//             }
-//                 .EmergencyText {
-//                     font-size: 16px;
-//                 }
-//                 .EmergencySubtext {
-//                     margin-top: 5px;
-//                     margin-bottom: 0;
-//                     font-size: 10px;
-//                 }
-//                 .Addimage {
-//                     width: 15px;
-//                     height: 15px;
-//                 }
-//                 .BtnPersonalInfo {
-//                     width: 100px;
-//                     font-size: 20px;
-//                     height: 35px;
-//                     padding: 1px 10px;
-//                 }
-//             }
-//     }
-
-    
 
