--- a/src/components/ScheduleAppointment/ScheduleAppointment.scss
+++ b/src/components/ScheduleAppointment/ScheduleAppointment.scss
@@ -1,145 +1,145 @@
-    .PersonalInformationInfoContainer{
-        display: flex;
-        justify-content: left;
-        flex-direction: column;
-        .Title {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 3%;
-            margin-bottom: 3%;
-            .PersonalInformationText {
-                margin-left: 15px;
-                color: #BFBDBD;
-                font-size: 40px;
-            }
-            img {
-                margin-right: 15px;
-                width: 25px;
-                height: 25px;
-                margin-top: 22px;
-            }
-        }
-        .Subtext {
-            margin-left: 15px;
-            font-size: 18px;
-            color: #BFBDBD;
-        }
-        .Form {
-            display: flex;
-            justify-content: left;
-            flex-direction: column;
-            margin-left: 15px;
-            .Form-control {
-                font-family: Roboto;
-                color: #B3B0B0;
-                margin-bottom: 15px;
-                display: flex;
-                flex-direction: column;
-                .UserLabel {
-                    font-family: 'Roboto';
-                    font-weight: 32;
-                    color: #B3B0B0;
-                    font-size: 22px;
-                    margin-right: 15px;
-                    margin-bottom: 5px;
-                }
-                .InputLogin {
-                    border: none;
-                    border-bottom: 1px solid #673AB7;
-                    border-radius: 3px;
-                    width: 80%;
-                    margin-bottom: 2%;
-                }
-            }
-        }
-        .BtnPersonalInfo {
-            width: 155px;
-            background-color: #FF4081;
-            color: white;
-            font-family: Roboto;
-            font-size: 35px;
-            height: 65px;
-            padding: 2px 15px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 3%;
-            border-radius: 10px;
-        }
-    }
+    // .PersonalInformationInfoContainer{
+    //     display: flex;
+    //     justify-content: left;
+    //     flex-direction: column;
+    //     .Title {
+    //         display: flex;
+    //         justify-content: space-between;
+    //         margin-top: 3%;
+    //         margin-bottom: 3%;
+    //         .PersonalInformationText {
+    //             margin-left: 15px;
+    //             color: #BFBDBD;
+    //             font-size: 40px;
+    //         }
+    //         img {
+    //             margin-right: 15px;
+    //             width: 25px;
+    //             height: 25px;
+    //             margin-top: 22px;
+    //         }
+    //     }
+    //     .Subtext {
+    //         margin-left: 15px;
+    //         font-size: 18px;
+    //         color: #BFBDBD;
+    //     }
+    //     .Form {
+    //         display: flex;
+    //         justify-content: left;
+    //         flex-direction: column;
+    //         margin-left: 15px;
+    //         .Form-control {
+    //             font-family: Roboto;
+    //             color: #B3B0B0;
+    //             margin-bottom: 15px;
+    //             display: flex;
+    //             flex-direction: column;
+    //             .UserLabel {
+    //                 font-family: 'Roboto';
+    //                 font-weight: 32;
+    //                 color: #B3B0B0;
+    //                 font-size: 22px;
+    //                 margin-right: 15px;
+    //                 margin-bottom: 5px;
+    //             }
+    //             .InputLogin {
+    //                 border: none;
+    //                 border-bottom: 1px solid #673AB7;
+    //                 border-radius: 3px;
+    //                 width: 80%;
+    //                 margin-bottom: 2%;
+    //             }
+    //         }
+    //     }
+    //     .BtnPersonalInfo {
+    //         width: 155px;
+    //         background-color: #FF4081;
+    //         color: white;
+    //         font-family: Roboto;
+    //         font-size: 35px;
+    //         height: 65px;
+    //         padding: 2px 15px;
+    //         margin-left: auto;
+    //         margin-right: auto;
+    //         margin-top: 3%;
+    //         border-radius: 10px;
+    //     }
+    // }
 
-    @media(max-width:576px) {
-        .ContainerContactsInformation{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            .PersonalInformationInfoContainer{
-                width:70%;
-                margin:auto;
-                .Title {
-                    margin-top: 8%;
-                    margin-bottom: 8%;
-                    .PersonalInformationText {
-                        font-size: 20px;
-                        margin-left: 0;
-                    }
-                }
-                .Form {
-                    margin-left:0px;
-                    .Form-control {
-                        margin-bottom: 15px;
-                        .UserLabel {
-                            font-size: 14px;
-                        }
-                        .InputLogin {
-                            margin-bottom: 0;
-                            width:100%;
-                            height:30px;
-                            border-radius:0px;
-                        }
-                    }
-                }
+    // @media(max-width:576px) {
+    //     .ContainerContactsInformation{
+    //         display: flex;
+    //         flex-direction: column;
+    //         justify-content: space-between;
+    //         .PersonalInformationInfoContainer{
+    //             width:70%;
+    //             margin:auto;
+    //             .Title {
+    //                 margin-top: 8%;
+    //                 margin-bottom: 8%;
+    //                 .PersonalInformationText {
+    //                     font-size: 20px;
+    //                     margin-left: 0;
+    //                 }
+    //             }
+    //             .Form {
+    //                 margin-left:0px;
+    //                 .Form-control {
+    //                     margin-bottom: 15px;
+    //                     .UserLabel {
+    //                         font-size: 14px;
+    //                     }
+    //                     .InputLogin {
+    //                         margin-bottom: 0;
+    //                         width:100%;
+    //                         height:30px;
+    //                         border-radius:0px;
+    //                     }
+    //                 }
+    //             }
                 
-                .Agenda {
-                    h3 {
-                    }
-                    img {
-                    }
-                }
-                .BtnPersonalInfo {
-                    font-size: 26px;
-                    height: 42px;
-                    width: 140px;
-                    margin-top: 30px;
-                }
-            }
-        }
-    }
+    //             .Agenda {
+    //                 h3 {
+    //                 }
+    //                 img {
+    //                 }
+    //             }
+    //             .BtnPersonalInfo {
+    //                 font-size: 26px;
+    //                 height: 42px;
+    //                 width: 140px;
+    //                 margin-top: 30px;
+    //             }
+    //         }
+    //     }
+    // }
 
-    @media(min-width:768px) {        
-        .PersonalInformationInfoContainer{
-            .Title {
-                margin-top: 8%;
-                margin-bottom: 8%;
-                .PersonalInformationText {
-                    font-size: 35px;
-                }
-            }
-            .Form {
-                .Form-control {
-                    margin-bottom: 15%;
-                    .UserLabel {
-                        font-size: 25px;
-                    }
-                    .InputLogin {
-                        margin-bottom: 0;
-                    }
-                }
-            }
-            .BtnPersonalInfo {
-                font-size: 35px;
-                height: 65px;
-                width: 160px;
-                margin-top: 5px;
-            }
-        }
-    }
+    // @media(min-width:768px) {        
+    //     .PersonalInformationInfoContainer{
+    //         .Title {
+    //             margin-top: 8%;
+    //             margin-bottom: 8%;
+    //             .PersonalInformationText {
+    //                 font-size: 35px;
+    //             }
+    //         }
+    //         .Form {
+    //             .Form-control {
+    //                 margin-bottom: 15%;
+    //                 .UserLabel {
+    //                     font-size: 25px;
+    //                 }
+    //                 .InputLogin {
+    //                     margin-bottom: 0;
+    //                 }
+    //             }
+    //         }
+    //         .BtnPersonalInfo {
+    //             font-size: 35px;
+    //             height: 65px;
+    //             width: 160px;
+    //             margin-top: 5px;
+    //         }
+    //     }
+    // }
