update styles register, scheduleAppointment components

--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -26,13 +26,16 @@
             // border-right: 1px solid;
             background-color: #6A1B9A;
             .RegisterTitle {
-                font-family: 'Tangerine';
+                font-family: 'Tangerine', cursive;
                 font-weight: 100;
                 font-size: 75px;
                 color: white;
                 margin-top: 0%;
                 margin-bottom: 2%;
             }
+                // .font-tangerine {
+                //     color:goldenrod;
+                // }
             .RegisterSubtitle {
                 font-family: 'Roboto';
                 font-weight: 40;
