--- a/src/components/RegisterTables/RegisterTables.scss
+++ b/src/components/RegisterTables/RegisterTables.scss
@@ -1,30 +1,94 @@
-    .GraphicInformationInfoContainer{
+.ContainerGraphicInformation {
+    height: 100vh;
+    width: 100vw;
+}
+    .GraphicInfoContainer{
         display: flex;
         align-items: center;
         flex-direction: column;
-        height: 100vh;
+        height: 80%;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+        box-shadow: 5px 5px 10px #dadada;
+        border: 1px solid #acacac;
+        border-radius: 5px;
+        padding: 30px;
         .GraphicInformationText {
-            color: #BFBDBD;;
+            font-family: 'Roboto';
+            font-weight: 700;
+            color: #B3B0B0;
+            margin-top: 0;
         }
         .ViewGraphic {
             display: flex;
-            justify-content: space-between;
-            .AddBtn {
-                width: 25px;
-                margin-left: 20%;
+            flex-direction: column;
+            justify-content: flex-start;
+            margin-top: 2%;
+            width: 100%;
+            height:100%;
+            .Graphic {
+                width: 100%;
+                height: 60%;
+                border: 1px dotted gray;
+                margin-bottom: 5%;
+            }
+            .GraphAndAddButtons {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                .GraphicButton {
+                    background-color: #FF4081;
+                    color: white;
+                    font-family: 'Roboto';
+                    font-size: 1.2rem;
+                    height: 40px;
+                    width: 120px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    margin-top: 1%;
+                    border-radius: 10px;
+                }
+                .AddBtn {
+                    width: 25px;
+                    height: 25px;
+                    margin-right: 10px;
+                }
             }
         }
     }
 
     @media(max-width:576px) {
-        
-        .GraphicInformationInfoContainer{
-            .GraphicInformationText {
-                font-size: 14px;
-            }
-            .ViewGraphic {
-                .AddBtn {
+        .ContainerGraphicInformation {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            .GraphicInfoContainer{
+                width: 80%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 30px;
+                box-shadow: none;
+                border: none;
+                border-radius: none;
+                padding: 0;
+                .GraphicInformationText {
+                    font-size: 1.1rem;
+                }
+                .ViewGraphic {
+                    .GraphicButton {
+                        font-size: 1.2rem;
+                        height: 35px;
+                        width: 105px;
+                        margin-top: 1%;
+                    }
+                    .AddBtn {
+                        width: 20px;
+                        height: 20px;
+                    }
                 }
             }
         }
     }
+        
