--- a/src/components/RegisterTables/RegisterTables.scss
+++ b/src/components/RegisterTables/RegisterTables.scss
@@ -31,20 +31,16 @@
             .Graphic {
                 width: 100%;
                 height: 60%;
-                //border: 1px dotted gray;
                 margin-bottom: 5%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                // .chart {
-                //     width: 90%;
-                //     height: 90%;
-                // }
             }
             .GraphAndAddButtons {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                justify-content: flex-end;
                 .GraphicButton {
                     background-color: #FF4081;
                     color: white;
@@ -52,15 +48,14 @@
                     font-size: 1.2rem;
                     height: 40px;
                     width: 120px;
-                    margin-left: auto;
-                    margin-right: auto;
+                    margin-right: 40px;
                     margin-top: 1%;
                     border-radius: 10px;
                 }
                 .AddBtn {
                     width: 25px;
                     height: 25px;
-                    margin-right: 10px;
+                    margin-right: 40px;
                 }
             }
         }
